# SoundStrem

./: CMakeLists.txt  enums.cpp  main.cpp  menu.cpp  sound.cpp
headers/: creation.h  sound.h
includes/: audiotype.h  element.h  genres.cpp  genres.h  menu.cpp  menu.h  menucontent.cpp  menucontent.h
includes/audio/: audio.cpp  audio.h  audiobook.cpp  audiobook.h  music.h  podcast.h
